# homework8

./: README.md
.github/workflows/: workflow8.yaml
src/: CMakeLists.txt  comparer.cpp  comparer.h  main.cpp  phile.cpp  phile.h  test_bayan.cpp
